# slow-is-fast

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt
build_tools/linux/: New Text Document.txt
build_tools/win/: LocalConfigAndBuildGoogletest.cmd  LocalConfigAndBuildOpencv.cmd  New Text Document.txt  localBuildAndConfigDummyCMakeApp.cmd
cmake/: config.cmake  hideconsole.cmake  options.cmake
doc/: notes.doc
src/: CMakeLists.txt
src/CVProject/: CMakeLists.txt  main.cpp  testReadTiffImage.h
src/ImageProcessArchitect/: CMakeLists.txt
src/ImageProcessArchitect/Core/: CMakeLists.txt  Core.cpp  Core.h  ImageProcessingPipeline.cpp  ImageProcessingPipeline.h  ImageStreamManager.cpp  ImageStreamManager.h
src/ImageProcessArchitect/DummyDemo/: CMakeLists.txt  imageProcessDemoApp.cpp
src/ImageProcessArchitect/ImageProcess/: CMakeLists.txt  DummyImageOperation.cpp  DummyImageOperation.h
src/ImageProcessArchitect/ImageProcessing/: CMakeLists.txt
src/ImageProcessArchitect/ImageStream/: CMakeLists.txt  DummyImageStream.cpp  DummyImageStream.h  FrameBuffer.cpp  FrameBuffer.h  IImageStream.h
src/ImageProcessArchitect/MAVision/: CMakeLists.txt  commondefinitions.h  mavision.cpp  mavision.h
src/ImageProcessArchitect/Utils/: CMakeLists.txt  SIFLog.cpp  SIFLog.h  debugdata.cpp  debugdata.h
src/ImageProcessArchitect/examples/: CMakeLists.txt  imageProcessDemoApp.cpp
src/concepts/: CMakeLists.txt  designpatterns.h  doc.txt  headerTest.h  main.cpp  miscellaneous.h  patterns.h  testAlgorithm.h  testCPPKeyWords.h  testCast.h  testConceptsUnderstanding.h  testConstructor.h  testDestructor.h  testExtern.cpp  testExtern.h  testFunctionPointers.h  testLValueRvalue.h  testMacro.h  testMap.h  testMultiThreading.h  testPrimitivDataType.h  testReturnValues.h  testSTDException.h  testSmartPointer.h  testStatic.h  testStdContainer.h  testStdFunctions.h  testTiming.h  testTrackMemory.h  testUtility.h  todoList.h  utility.h
src/dummyCmake/: CMakeLists.txt  dummyDemo.cpp  thea.h
src/dummyCmake/dummyCalc/: CMakeLists.txt  calc.cpp  calc.h
src/examples/: CMakeLists.txt
src/test/: CMakeLists.txt  dummytest.cpp
